- update to Go 1.16; preps for non-root image

--- a/docker/scratch/Dockerfile
+++ b/docker/scratch/Dockerfile
@@ -1,6 +1,11 @@
-FROM scratch
+FROM golang:latest as buildr
+WORKDIR /src
+ADD . .
+RUN rm -r gopath; go build -o http-echo
+
+FROM gcr.io/distroless/base
 LABEL maintainer "Seth Vargo <seth@sethvargo.com> (@sethvargo)"
 
 ADD "https://curl.haxx.se/ca/cacert.pem" "/etc/ssl/certs/ca-certificates.crt"
-ADD "./pkg/linux_amd64/http-echo" "/"
+COPY --from=buildr "/src/http-echo" "/"
 ENTRYPOINT ["/http-echo"]
